--- a/mall/signup.html
+++ b/mall/signup.html
@@ -4,19 +4,24 @@
 <head>
   <title>403商城 - 注册</title>
   <meta charset="utf-8">
+
+  <!-- Bootstrap and jQuery -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/js.cookie.min.js"></script>
+
   <link rel="stylesheet" href="css/signin.css">
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
-  <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://cdn.bootcss.com/js-cookie/latest/js.cookie.min.js"></script>
-  <script src="js/globalstyle.js"></script>
+  <script src="js/global_style.js"></script>
   <script src="js/global_api.js"></script>
 
   <script type="text/javascript">
-    $(document).ready(function () {
-      $("#sign_form").submit(function (event) {
+    $(document).ready(function ()
+    {
+      $("#sign_form").submit(function (event)
+      {
         event.preventDefault();
         signup();
       });
@@ -44,12 +49,15 @@
       console.log(data);
       $.post(API_SIGNUP,  //发起post请求
         JSON.stringify(data),
-        function (data, status) {
+        function (data, status)
+        {
           var result = JSON.parse(data);
-          if (result.type=="success") {
+          if (result.type == "success")
+          {
             create_alertbox('注册成功,请<a href="signin.html">登录</a>', "alert-success");
           }
-          else {
+          else
+          {
             create_alertbox("注册失败：该用户名已存在", "alert-warning");
           }
         }
