update new functions

--- a/mall/navigate_bar.html
+++ b/mall/navigate_bar.html
@@ -52,13 +52,11 @@
             $("#nav_admin").hide();
             break;
         case "admin":
-            $("#nav_customer").hide();
-            $("#nav_seller").hide();
             break;
         default:
-            // $("#nav_customer").hide();
-            // $("#nav_seller").hide();
-            // $("#nav_admin").hide();
+            $("#nav_customer").hide();
+            $("#nav_seller").hide();
+            $("#nav_admin").hide();
             break;
     }
 </script>
