--- a/mall/customer_center.html
+++ b/mall/customer_center.html
@@ -34,6 +34,7 @@
                     if (a.id == userid)
                     {
                         $("#user_name").val(a.name);
+                        $("#user_username").text(username);
                         $("#user_id").text(a.id);
                         $("#user_tel").val(a.phone);
                         $("#user_addr").val(a.adress);
@@ -70,49 +71,74 @@
                 console.log("orders:");
                 console.log(data);
                 //找到所有的订单
-                for (var a in data)
+                //管理员加载所有订单
+                if (usertype == "admin")
                 {
-                    if (data[a].cli_name == username) 
+                    for (var a in data) orderList[data[a].id] = data[a];
+                }
+                else//用户加载自己的订单
+                {
+                    for (var a in data)
                     {
-                        orderList[data[a].id] = data[a];
-                        $("#myOrders").append(CreateOrderCard(data[a].id,data[a]));
+                        if (data[a].cli_id == userid) orderList[data[a].id] = data[a];
                     }
                 }
+                $("#myOrders").text("");
+                //展示订单表格
+                for (var a in orderList) $("#myOrders").append(CreateOrderCard(a, orderList[a]));
             });
         }
 
-        function CreateOrderCard(ordername,order)
+        function CreateOrderCard(orderid, order)
         {
-            var card=$('<div class="card mb-3"></div>');
-            var header=$('<div class="card-header" style="padding:0.5rem"></div>');
-            header.append(`<span class="mr-3">订单号:${ordername}</span><span class="mr-3">${order.time}</span>`);
+            //对订单中商品做一些备注
+            for (var a in order.goods) 
+            {
+                if (order.goods[a].status == "pay") order.goods[a].status = '<span class="text-success">完成</span>';
+                if (order.goods[a].status == "returned") order.goods[a].status = '<span class="text-danger">已退货</span>';
+                order.goods[a].return = { orderid: orderid, goodid: order.goods[a].goods_id };
+            }
+
+            var card = $('<div class="card mb-3"></div>');
+            var header = $('<div class="card-header" style="padding:0.5rem"></div>');
+            header.append(`<span class="mr-3">订单号:${orderid}</span><span class="mr-3">${order.time}</span>`);
             card.append(header);
-            var body=$('<div class="card-body" style="padding: 0"></div>');
+            var body = $('<div class="card-body" style="padding: 0"></div>');
             body.raytable({
-                datasource: { data: order.goods,keyfield:""},
-                        tableclass:"table table-sm",
-                        columns: [
-                            { field: "goods_name", title: "商品名" },
-                            { field: "price", title: "单价" },
-                            { field: "num", title: "数量" },
-                            {title:"操作",button:[{ title: "退货", class:'btn btn-sm btn-info', handler: ReturnGoods },]}
-                        ],
+                datasource: { data: order.goods, keyfield: "return" },
+                tableclass: "table table-sm",
+                columns: [
+                    { field: "goods_name", title: "商品名" },
+                    { field: "price", title: "单价" },
+                    { field: "num", title: "数量" },
+                    { field: "status", title: "状态" },
+                    { title: "操作", button: [{ title: "退货", class: 'btn btn-sm btn-info', handler: ReturnGoods },] }
+                ],
             });
             card.append(body);
-            var footer=$(`<div class="card-footer" style="padding: 0.2rem"><span class=" float-right">￥${order.payment}</span></div>`);
-            //var btn=$('<button type="button" class="btn btn-info btn-sm float-right">退货</button>');
-            //btn.on('click',null,ordername,ReturnGoods);
-            //footer.append(btn);
+            var footer = $(`<div class="card-footer" style="padding: 0.2rem"><span class=" float-right">￥${order.payment}</span></div>`);
             card.append(footer);
             return card;
         }
 
+        //退货
         function ReturnGoods(event)
         {
-            ordername=event.data;
+            retparam = event.data.key;
             //{'ind_id': 1, 'goods_id': 2}
-            //var data={ind_id:ordername,goods_id:}
-            alert("暂未开放！");
+            var data = { ind_id: retparam.orderid, goods_id: retparam.goodid };
+            $.post(API_RETURN_PRODUCT, JSON.stringify(data), function (result)
+            {
+                result=JSON.parse(result);
+                if (result.type == "error")
+                    create_alertbox_new(result.note, "退货失败", "text-danger");
+                else
+                {
+                    create_alertbox_new("请将商品于7日内快递给商户，感谢您的配合", "退货成功");
+                    LoadUserOrders();
+                }
+                
+            });
         }
     </script>
 </head>
@@ -147,6 +173,12 @@
                                 <div class="form-group row">
                                     <label class="col-sm-3 form-control-label">用户名</label>
                                     <div class="col-sm-9">
+                                        <span id="user_username"></span>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-3 form-control-label">昵称</label>
+                                    <div class="col-sm-9">
                                         <input type="text" class="form-control" id="user_name" placeholder="Shit">
                                     </div>
                                 </div>
@@ -163,12 +195,12 @@
                                     </div>
                                 </div>
                                 <div class="form-group row">
-                                        <label class="col-sm-3 form-control-label" style="padding-right: 0">消费总额</label>
-                                        <div class="input-group col-sm-9">
-                                            <span>￥</span>
-                                            <span id="user_total">0</span>
-                                        </div>
+                                    <label class="col-sm-3 form-control-label" style="padding-right: 0">消费总额</label>
+                                    <div class="input-group col-sm-9">
+                                        <span>￥</span>
+                                        <span id="user_total">0</span>
                                     </div>
+                                </div>
                             </form>
                         </div>
                         <div class="card-footer" style="padding: 0.5rem">
