微调首页购物车

--- a/mall/index.html
+++ b/mall/index.html
@@ -51,7 +51,7 @@
                         <br/>
                         <!--总价和提交框-->
                         <form class="form">
-                            <div class="input-group mb-2">
+                            <div class="input-group input-group-sm mb-2">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">总计</span>
                                     <span class="input-group-text bg-light">￥</span>
