--- a/mall/navigate_bar.html
+++ b/mall/navigate_bar.html
@@ -26,6 +26,7 @@
                 <div class="dropdown-menu" aria-labelledby="nav_admin">
                     <a class="dropdown-item" href="customer_manage.html">客户管理</a>
                     <a class="dropdown-item" href="seller_manage.html">商户管理</a>
+                    <a class="dropdown-item" href="statistics.html">统计分析</a>
                 </div>
             </li>
         </ul>
