--- a/mall/signin.html
+++ b/mall/signin.html
@@ -13,9 +13,27 @@
   <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" href="css/signin.css">
+  <!-- <link rel="stylesheet" href="css/signin.css"> -->
   <script src="js/global_style.js"></script>
   <script src="js/global_api.js"></script>
+  <style>
+    html {
+      height: 100%;
+    }
+
+     body {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    } 
+    
+    .form-signin {
+      max-width: 18rem;
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+    }
+  </style>
 
   <script type="text/javascript">
     $(document).ready(function ()
