--- a/SmartFarm/index.html
+++ b/SmartFarm/index.html
@@ -11,85 +11,11 @@
         <script src="bootstrap-4.3.1-dist\jquery-3.3.1.min.js"></script>
         <script src="bootstrap-4.3.1-dist\popper.min.js"></script>
         <script src="bootstrap-4.3.1-dist\bootstrap.min.js"></script>
+        <script src="index.js"></script>
 
         <script>
 
-                $().ready(
-                        function () {
-                                getMap("map1");
-                        }
-                )
 
-                function getMap(filename) {
-                        $.getJSON({
-                                url: `${filename}.json`,
-                                dataType: "json",
-                                success: function (data) {
-                                        draw(data.data);
-                                },
-
-                                error: function () {
-                                        alert('地形加载失败！');
-                                }
-                        });
-                }
-
-                function draw(map) {
-                        myCanvas = document.getElementById("myCanvas");
-                        var container = $("#myCanvas-container");
-                        var f_height = container.height();
-                        var f_width = container.width();
-                        canvasLength = f_height > f_width ? f_width : f_height;
-
-                        ratio = window.devicePixelRatio;
-                        myCanvas.style.height = canvasLength + 'px';
-                        myCanvas.style.width = canvasLength + 'px';
-                        myCanvas.width = canvasLength * ratio;
-                        myCanvas.height = canvasLength * ratio;
-
-                        map_height = map.length;
-                        map_width = map[0].length;
-                        pixel_length = Math.floor(canvasLength / map_height);
-                        ctx = myCanvas.getContext("2d");
-
-                        ctx.lineWidth = 1;
-                        ctx.font = "10px 微软雅黑";
-                        ctx.scale(ratio, ratio);
-
-                        //画网格
-                        ctx.strokeStyle = "#444444";
-                        ctx.lineWidth = 1;
-                        for (i = 0; i <= map_height; i++) {
-                                ctx.beginPath();
-                                ctx.moveTo(0, i * pixel_length);
-                                ctx.lineTo(map_width * pixel_length, i * pixel_length);
-                                ctx.stroke();
-                        }
-                        for (i = 0; i <= map_height; i++) {
-                                ctx.beginPath();
-                                ctx.moveTo(i * pixel_length, 0);
-                                ctx.lineTo(i * pixel_length, map_width * pixel_length);
-                                ctx.stroke();
-                        }
-
-                        //填充颜色和数字
-                        for (i = 0; i < map_height; i++) {
-                                for (j = 0; j < map_width; j++) {
-                                        var x = j * pixel_length;     //左上角的横坐标
-                                        var y = i * pixel_length;     //左上角的纵坐标
-                                        drawSquare(ctx, x, y, map[i][j], pixel_length);
-                                }
-                        }
-                }
-
-                //画一个小方格
-                function drawSquare(ctx, x, y, value, length) {
-                        var color = 255 - 255 * value / 5;              //计算填充颜色
-                        ctx.fillStyle = `rgb(255,${color},${color})`;   //填充
-                        ctx.fillRect(x + 1, y + 1, length - 2, length - 2);
-                        ctx.strokeStyle = "black";                     //文字颜色
-                        ctx.strokeText(value, x + length / 2, y + length / 2);  //数字
-                }
         </script>
 
 </head>
@@ -111,23 +37,24 @@
                 </button>
         </nav>
 
-        <div class="">
+        <div>
 
                 <div class="row m-0">
                         <div class="col-2 p-0">
                                 <div class="list-group" id="list-tab" role="tablist">
                                         <a class="list-group-item list-group-item-action rounded-0 active"
-                                                id="list-home-list" data-toggle="list" href="#" role="tab" onclick="getMap('map1');">农场1号</a>
-                                        <a class="list-group-item list-group-item-action" id="list-profile-list"
-                                                data-toggle="list" href="#" role="tab" onclick="getMap('map2');">农场2号</a>
-                                        <a class="list-group-item list-group-item-action" id="list-messages-list"
-                                                data-toggle="list" href="#" role="tab" onclick="getMap('map3');">农场3号</a>
-                                        <a class="list-group-item list-group-item-action rounded-0"
-                                                id="list-settings-list" data-toggle="list" href="#" role="tab" onclick="getMap('map4');">农场4号</a>
+                                                data-toggle="list" href="#" role="tab"
+                                                onclick="getMap('map1');">农场1号</a>
+                                        <a class="list-group-item list-group-item-action" data-toggle="list" href="#"
+                                                role="tab" onclick="getMap('map2');">农场2号</a>
+                                        <a class="list-group-item list-group-item-action" data-toggle="list" href="#"
+                                                role="tab" onclick="getMap('map3');">农场3号</a>
+                                        <a class="list-group-item list-group-item-action rounded-0" data-toggle="list"
+                                                href="#" role="tab" onclick="getMap('map4');">农场4号</a>
                                 </div>
                         </div>
                         <div class="col border d-flex p-1" id="myCanvas-container" style="height:600px">
-                                <canvas id="myCanvas" />
+                                <canvas id="myCanvas"> 您的浏览器不支持HTML5！ </canvas>
 
                         </div>
 
@@ -136,36 +63,52 @@
                                         <form class="form">
                                                 <div class="form-group row mb-0">
                                                         <label for="input-uav-number"
-                                                                class="col-sm-6 col-form-label">无人机数量</label>
-                                                        <div class="col-sm-6">
+                                                                class="col col-form-label">无人机数量</label>
+                                                        <div class="col-7">
                                                                 <input class="form-control form-control-sm"
                                                                         type="number" id="input-uav-number" value="1">
                                                         </div>
                                                 </div>
                                                 <div class="form-group row mb-0">
                                                         <label for="input-uav-number"
-                                                                class="col-sm-6 col-form-label">无人机续航</label>
-                                                        <div class="col-sm-6">
+                                                                class="col col-form-label">无人机续航</label>
+                                                        <div class="col-7">
                                                                 <input class="form-control form-control-sm"
                                                                         type="number" id="input-uav-number" value="20">
                                                         </div>
                                                 </div>
                                                 <div class="form-group row mb-0">
                                                         <label for="input-uav-number"
-                                                                class="col-sm-6 col-form-label">无人机载重</label>
-                                                        <div class="col-sm-6">
+                                                                class="col col-form-label">无人机载重</label>
+                                                        <div class="col-7">
                                                                 <input class="form-control form-control-sm"
                                                                         type="number" id="input-uav-number" value="20">
                                                         </div>
                                                 </div>
-                                                <div class="form-group mb-0">
+                                                <div class="form-group">
                                                         <input type="submit" class="btn btn-primary btn-block" />
                                                 </div>
                                         </form>
+                                        <div class="card">
+                                                <div class="card-header">
+                                                        路径绘制控制
+                                                </div>
+                                                <div class="card-body">
+                                                        <div class="btn-group" role="group" aria-label="Basic example">
+                                                                <button type="button" class="btn btn-dark"
+                                                                        onClick="drawPath(path);">开始</button>
+                                                                <button type="button" class="btn btn-dark" onclick="clearInterval(action)">停止</button>
+                                                                <button type="button" class="btn btn-dark" onclick="drawMap(map)">重置</button>
+                                                        </div>
+                                                </div>
+
+                                        </div>
                         </div>
                 </div>
 
         </div>
+
+        <img src="images/drone_1219960_easyicon.net.svg" height="50" width="50" class="d-none" id="img_drone" />
 </body>
 
 </html>
